# KnowledgeEngine

./: Dockerfile  README.md  main.py  pyproject.toml
examples/: clip_t.py  ebd_t.py  hub_download.py  local_models.py  spe_t.py
examples/alg/: clus_t.py  simbuk_t.py
examples/http/: bth_clus_h.py  clip_h.py  ebd_h.py  rerank_h.py  simbuk_h.py
examples/mod/: clip_t.py  ebd_t.py  ebds_t.py  ocr_t.py  rerank_t.py
examples/orch/: spe_alg_t.py  spe_ebds_km.py  spe_erc_t.py
examples/test_data/: dialog.py  generate_embeddings.py
model_cache/: ModelBook.md
src/algorisms/: algorism_structs.py  bucketing.py  clustering.py
src/model_objects/: __init__.py  model_bases.py  model_book..py  model_loader.py
src/model_objects/embedding/: embedding_model_base.py  jina_series_adapters.py
src/model_objects/semantic/: jina_series_adapters.py  model_bases.py  openai_series_adapters.py  qwen_series_adapters.py
src/routers/: service_router.py
src/task_orchestrator/: engine_request_struct.py  engine_structs.py  load_request_struct.py  orchestrator_engine_base.py  orchestrator_interface.py
src/task_orchestrator/asyncio_ray_engine/: engine.py
src/task_orchestrator/single_process_engine/: engine.py
src/utils/: device_watcher.py  setup_logging.py
tests/: load_model_test.py
